# void

./: .gitignore  AGENT-INTEGRATION-TESTS.md  AGENTS.md  HONO.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.github/workflows/: deploy.yml  release.yml  test.yml
agent/: Cargo.toml  Makefile  _test_pb.json  _test_playbook.json
agent/src/: config.rs  connection.rs  crypto.rs  deploy.rs  detect.rs  handlers.rs  inventory.rs  keys.rs  log.rs  logging.rs  main.rs  pipeline.rs  protocol.rs  shell.rs  tunnel.rs
agent/src/engine/: apt.rs  backend.rs  docker.rs  file.rs  mod.rs  module.rs  runner.rs  systemd.rs  user.rs
agent/src/modules/: build.rs  compose.rs  daemon.rs  git_clone.rs  mod.rs  registry.rs  run.rs  shell.rs
docs/: ARCHITECTURE.md  PROTOCOL.md  README.md  SPEC.md
examples/static-site/: README.md  index.html  package.json
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts  utils.ts
install/: install-agent.sh
runs/$(date +%s)/: manifest.json
runs/1747046689/: result.json
runs/1783759712/: result.json
runs/20260717-151512-psync/: compiled-intent.json  vm.log.md
scripts/: ci-check-warnings.sh  replace-colors.py  test-config-apply.sh  test-docker-apply.sh  test-integration-apt.sh  test-integration-docker.sh  test-integration-file.sh  test-integration-user.sh
scripts/test-lab/: README.md  agent-build.sh  agent-vm.sh  deploy.sh  down.sh  lib.sh  logs.sh  provision.sh  servers.sh  up.sh
spec/: README.md
spec/agent/: spec.md
spec/cli/: spec.md
spec/control-plane/: spec.md
spec/deploy/: spec.md
spec/test-lab/: spec.md
spec/ui/: spec.md
src/: protocol-sync.prose.md
worker/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.dev.jsonc  wrangler.jsonc
worker/scripts/: extract-cloud-init.mts  test-cloud-init.sh
worker/src/: auth-dev.ts  auth.ts  cf.ts  credentials.ts  crypto.ts  db.ts  dev-entry.ts  env.ts  github-connections.ts  hetzner.ts  index.ts  mcp.ts  state.ts  (+14 more)
(+284 files in other folders)
