[package]
name = "void-agent"
version = "0.1.0"
edition = "2021"
description = "void agent — runs on user VMs, talks to control plane over WebSocket"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "url"] }
rustls = { version = "0.23", features = ["ring", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hmac = "0.12"
hex = "0.4"
libc = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
ulid = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
